# clusteration

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: dokploy-runtime-repair.yml
alembic/: env.py
app/: exposure_proxy.py  main.py
app/api/: auth.py  internal.py  routes.py
app/core/: config.py  errors.py  readiness.py
app/models/: __init__.py
app/schemas/: vms.py
app/services/: terminal.py
app/static/css/: app.css
app/static/js/: clusteration-hero.js  dashboard.js  password-toggle.js
app/templates/: base.html  dashboard.html  login.html
app/templates/partials/: vm_table.html
app/ui/: routes.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/versions/: 0001_initial.py  0002_audit_events.py  0003_admin_credentials.py
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: auth.py  config.py  readiness.py
backend/config/: cluster.env.example  ssh_config.example
backend/scripts/: add-fifth-node.md  build-cloudinit-templates.sh  configure-panel-token.sh  configure-vzdump.sh  dokploy-repair.py  harden-ssh-key-only.sh  panel-doctor.py
docs/: cluster-handoff.md  deploy-audit-2026-06-20.md  deployment.md
frontend/: Dockerfile  nginx-main.conf  nginx.conf
frontend-ui-ux-extract/: README.md
frontend/css/: app.css
scripts/: cluster-health.sh  lib.sh  panel-doctor.py  rolling-upgrade.sh  rotate-root-password.sh  update-pve-certs.sh
tests/: test_config.py  test_proxmox_client.py
(+25 files in other folders)
